# recon3d

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
recon3d/: __init__.py  chunked_vggt.py  cli.py  exporters.py  gaussian_train.py  metric_align.py  pipeline.py  pose_estimation.py  video.py  viewer.py
scripts/: demo_360.py  demo_360_v2.py  demo_real_world.py  make_demo.py  make_demo_real.py  make_demo_v2.py  make_demo_v3.py
tests/: test_check.py  test_chunked.py  test_cli_integration.py  test_e2e_synthetic.py  test_pipeline_mock.py  test_vggt_e2e.py  test_video.py
